# code-explainer

./: .gitignore  README.md  pyproject.toml
.claude/skills/code-explainer/: SKILL.md
src/code_explainer/: __init__.py  cli.py  explainer.py  git_utils.py  observations.py  skill.py  topics.py
src/code_explainer/prompts/: __init__.py  common.py  diff.py  file.py  function.py  observe.py  repo.py
tests/: test_cli.py
